syntax = "proto3";
package cc.lianmi.im.code;
option go_package = "github.com/lianmi/servers/api/proto/code";

//错误码定义
message ErrorMsg {
    //错误码
    //默认值0，即未知错误
	int32 ret = 1; 
    //错误消息
    string msg=2; 
}